arm64: dts: elvees: trustphonecb: Describe TPS6105x led-flash driver
Issue: #MCOM03SW-1783
Change-Id: Iee0064055ae0880b45abd4a09d502ee2138d93c8

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
@@ -341,6 +341,20 @@
 			reg = <1>;
 		};
 	};
+
+	tps61050: flash@33 {
+		compatible = "ti,tps61050";
+		reg = <0x33>;
+
+		flash {
+			compatible = "ti,tps6105x-flash";
+			ti,edge-sensitive;
+			label = "flash-led";
+			led-max-microamp = <500000>;
+			flash-max-microamp = <1200000>;
+			flash-max-timeout-us = <900000>;
+		};
+	};
 };
 
 &hsperiph_pinctrl {
