--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -100,7 +100,9 @@ CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBCM203X=m
 CONFIG_BT_HCIBPA10X=m
 CONFIG_BT_HCIBFUSB=m
-# CONFIG_WIRELESS is not set
+CONFIG_CFG80211=m
+CONFIG_MAC80211=m
+CONFIG_MAC80211_LEDS=y
 CONFIG_CAIF=m
 CONFIG_CAIF_USB=m
 CONFIG_NFC=m
@@ -111,6 +113,7 @@ CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_STANDALONE is not set
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
+CONFIG_BLK_DEV_NVME=m
 CONFIG_SRAM=y
 CONFIG_EEPROM_AT24=y
 CONFIG_MISC_RTSX_USB=m
@@ -118,6 +121,8 @@ CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_BLK_DEV_SR=m
 CONFIG_CHR_DEV_SG=m
+CONFIG_ATA=m
+CONFIG_SATA_AHCI=m
 CONFIG_NETDEVICES=y
 # CONFIG_NET_VENDOR_ALACRITECH is not set
 # CONFIG_NET_VENDOR_AMAZON is not set
@@ -134,14 +139,20 @@ CONFIG_ARASAN_GEMAC=y
 # CONFIG_NET_VENDOR_EZCHIP is not set
 # CONFIG_NET_VENDOR_HISILICON is not set
 # CONFIG_NET_VENDOR_HUAWEI is not set
-# CONFIG_NET_VENDOR_INTEL is not set
-# CONFIG_NET_VENDOR_MELLANOX is not set
+CONFIG_IGB=m
+CONFIG_IGBVF=m
+CONFIG_IXGBE=m
+CONFIG_IXGBEVF=m
+CONFIG_MLX5_CORE=m
+CONFIG_MLX5_CORE_EN=y
 # CONFIG_NET_VENDOR_MICREL is not set
+CONFIG_LAN743X=m
 # CONFIG_NET_VENDOR_MICROSEMI is not set
 # CONFIG_NET_VENDOR_NATSEMI is not set
 # CONFIG_NET_VENDOR_NETRONOME is not set
 # CONFIG_NET_VENDOR_NI is not set
 # CONFIG_NET_VENDOR_QUALCOMM is not set
+CONFIG_R8169=m
 # CONFIG_NET_VENDOR_RENESAS is not set
 # CONFIG_NET_VENDOR_ROCKER is not set
 # CONFIG_NET_VENDOR_SAMSUNG is not set
@@ -186,7 +197,8 @@ CONFIG_USB_SIERRA_NET=m
 CONFIG_USB_VL600=m
 CONFIG_USB_NET_CH9200=m
 CONFIG_USB_NET_AQC111=m
-# CONFIG_WLAN is not set
+CONFIG_ATH10K=m
+CONFIG_ATH10K_PCI=m
 CONFIG_INPUT_MOUSEDEV=m
 CONFIG_INPUT_JOYDEV=m
 CONFIG_MOUSE_APPLETOUCH=m
@@ -225,6 +237,7 @@ CONFIG_SPI=y
 CONFIG_SPI_DESIGNWARE=m
 CONFIG_SPI_DW_MMIO=m
 CONFIG_SPI_SPIDEV=m
+# CONFIG_PTP_1588_CLOCK is not set
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_DWAPB=y
 CONFIG_PINCTRL_MCP23S08=y
@@ -464,7 +477,6 @@ CONFIG_MMC_REALTEK_USB=m
 CONFIG_MEMSTICK=m
 CONFIG_MEMSTICK_REALTEK_USB=m
 CONFIG_LEDS_GPIO=m
-CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=m
 CONFIG_LEDS_TRIGGER_ONESHOT=m
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
