dt-bindings: kbuild: Redirect mk-schema errors to .mk-schema-err
About ~170 files of other vendors have errors when parsing by mk-schema
utility, so in order to beautify the log output let's redirect the
`stderr` to `.mk-schema-err` file.

This file then can be parsed to determine if any of ELVEES `*.yaml`
modified files have errors upon `cmd_mk_schema` command.

Issue: #MCOM03SW-715
Change-Id: Icb1b07dd576d7d3b9aa663c6d4b2103bfdd4e207
Signed-off-by: Omar Al-Wadi <oalwadi@elvees.com>

--- a/Documentation/devicetree/bindings/Makefile
+++ b/Documentation/devicetree/bindings/Makefile
@@ -47,7 +47,7 @@ quiet_cmd_chk_bindings = CHKDT   $@
 quiet_cmd_mk_schema = SCHEMA  $@
       cmd_mk_schema = f=$$(mktemp) ; \
                       $(find_all_cmd) > $$f ; \
-                      $(DT_MK_SCHEMA) -j $(DT_MK_SCHEMA_FLAGS) @$$f > $@ ; \
+                      $(DT_MK_SCHEMA) -j $(DT_MK_SCHEMA_FLAGS) 2> .mk-schema-err @$$f > $@ ; \
 		      rm -f $$f
 
 define rule_chkdt
