arm64: dts: elvees: ngfwcb: Specify rts-gpios from uart2
UART2 on NGFW-CB is used as RS-485. RTS is required for data
direction control. Used GPIO0_PORTB_4 instead of RTS because
UART2 doesn't have RTS signal.

Issue: #MCOM03SW-1945
Change-Id: I246e64cee9c36dc00a7fec35109acf25afba41cb
Signed-off-by: Vasiliy Zasukhin <vzasukhin@elvees.com>
(cherry picked from commit ce58505a2af3b093117dbf6664e2efe6b13c1f33)

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
@@ -43,6 +43,7 @@
 /* Connected to RJ-45 through RS-485 transceiver */
 &uart2 {
 	status = "okay";
+	rts-gpios = <&gpio0b 4 GPIO_ACTIVE_HIGH>;
 };
 
 /* Connected to MicroSD card */
