arm64: dts: elvees: Move I2C4 description into separate dtsi
I2C4 is located in service subsystem and should not be configured
by Linux kernel in case of secure applications are running.
We have to remove it but it is still used in tests and required
for legacy board support. Currently we move it in the separate dtsi
and will remove in future.

Issue: #MCOM03SW-1885
Change-Id: I55bee08cdc45cf9fef50ca1839d208d334fe7c92

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2-elvmc03cb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2-elvmc03cb-r1.0.dts
@@ -8,6 +8,7 @@
 #include <dt-bindings/net/ti-dp83867.h>
 
 #include "mcom03-elvmc03-r2.2.dtsi"
+#include "mcom03-i2c4.dtsi"
 
 / {
 	model = "ELV-MC03 r2.2, ELV-MC03-CB r1.0";
