--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
@@ -9,6 +9,7 @@
 #include <dt-bindings/input/linux-event-codes.h>
 
 #include "mcom03-trustphonepm-r1.5.dtsi"
+#include "mcom03-i2c4.dtsi"
 
 / {
 	model = "Trustphone PM r1.5, Trustphone CB r1.1";
