--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2-elvmc03cb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2-elvmc03cb-r1.0.dts
@@ -134,9 +134,18 @@
 	status = "okay";
 };
 
+&lsperiph1_pinctrl {
+	emac1_int_cfg: emac1-int-cfg {
+		phy {
+			pins = "GPIOA_7";
+			input-enable;
+		};
+	};
+};
+
 &emac1 {
 	status = "okay";
-
+	pinctrl-0 = <&emac1_default &emac1_int_cfg>;
 	phy-handle = <&ethernet_phy1>;
 	reset-gpios = <&gpio1d 6 GPIO_ACTIVE_LOW>;
 	reset-post-delay-us = <400000>;
