--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
@@ -88,6 +88,16 @@
 		reg = <0x18>;
 	};
 
+	hwmon@49 {
+		compatible = "ti,lm73";
+		reg = <0x49>;
+	};
+
+	hwmon@4a {
+		compatible = "ti,lm73";
+		reg = <0x4a>;
+	};
+
 	fancontrol: emc2303@4d {
 		compatible = "microchip,emc2305";
 		reg = <0x4d>;
