arm64: dts: elvees: trustphonecb: Describe APDS-9930 light/proximity sensor
Issue: #MCOM03SW-1773
Change-Id: I4724f12084dcadbe0a0df02ceefbf8fb9af7c99d

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
@@ -291,6 +291,14 @@
 			reg = <1>;
 		};
 	};
+
+	apds9930: sensor@39 {
+		compatible = "avago,apds9930";
+		reg = <0x39>;
+		interrupts-extended = <&tca9554_0 4 IRQ_TYPE_EDGE_FALLING>;
+		amstaos,proximity-diodes = <0 1>;
+		led-max-microamp = <100000>;
+	};
 };
 
 &hsperiph_pinctrl {
