arm64: dts: elvees: trustphonecb: Change CAMR/CAMF i2c multiplexer
TCA9546APWR i2c multiplexer is installed on the Revision 2.0 board
instead of PI4MSD5V9540BZEEX.
Need the appropriate driver.

Issue: #MCOM03SW-1253
Change-Id: I10ac6535d6dbd7ef78da0cc1933707dcecbb1e30

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
@@ -279,7 +279,7 @@
 
 	/* DD26 */
 	i2c-switch@74 {
-		compatible = "pericom,pi4msd5v9540", "nxp,pca9540";
+		compatible = "ti,tca9546", "nxp,pca9546";
 		#address-cells = <1>;
 		#size-cells = <0>;
 		reg = <0x74>;
