dt-bindings: net: Add 'rgmii-sgmii-bridge-default' property
This property can be used to set phy to RGMII/SGMII bridge by default.
Other properties should describe sencodary mode (e.g. Copper Ethernet),
which can be enabled using ethtool utility (ethtool -s eth0 port tp).

In abscense of this property other properties should describe main
mode and RGMII/SGMII bridge mode can be enabled using ethtool command
(ethtool -s eth0 port fibre).

Issue: #MCOM03SW-1886
Signed-off-by: Vladimir Terekhov <vterekhov@elvees.com>
Change-Id: Icfde419967acbee36ec1179ec4a29442be6d8641

--- a/Documentation/devicetree/bindings/net/ti,dp83869.yaml
+++ b/Documentation/devicetree/bindings/net/ti,dp83869.yaml
@@ -76,6 +76,12 @@ properties:
             3250, 3500, 3750, 4000 ]
     default: 2000
 
+  ti,rgmii-sgmii-bridge-default:
+    type: boolean
+    description: |
+       Use RGMII/SGMII bridge mode by default (can be switched via ethtool). All
+       other properties should describe secondary mode.
+
 required:
   - reg
 
