--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -301,6 +301,7 @@ CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_W1=m
 CONFIG_W1_MASTER_DS2482=m
 CONFIG_W1_SLAVE_SMEM=m
+CONFIG_BATTERY_MAX17042=m
 CONFIG_SENSORS_MR75202=y
 CONFIG_SENSORS_LM73=m
 CONFIG_SENSORS_S5851A=m
