arm64: dts: elvees: trustphonecb: Describe MAX17055 battery indicator
Issue: #MCOM03SW-1782
Change-Id: I4f05ab7fcde7eea7bd323e5b2ba019524020f03c

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1.dts
@@ -240,6 +240,14 @@
 			};
 		};
 	};
+
+	max17055: battery-indicator@36 {
+		compatible = "maxim,max17055";
+		reg = <0x36>;
+		maxim,rsns-microohm = <10000>;
+		maxim,over-heat-temp = <600>;
+		maxim,over-volt = <4300>;
+	};
 };
 
 /* pinctrl driver doesn't enable pad receiver when GPIO pin is requested as an
