--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
@@ -289,6 +289,14 @@
 			};
 		};
 	};
+
+	max17055: battery-indicator@36 {
+		compatible = "maxim,max17055";
+		reg = <0x36>;
+		maxim,rsns-microohm = <10000>;
+		maxim,over-heat-temp = <600>;
+		maxim,over-volt = <4300>;
+	};
 };
 
 &i2c1 {
