--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-ngfwcb-r1.0.dts
@@ -185,6 +185,14 @@
 	num-cs = <2>;
 	cs-gpios = <&gpio0c 4 GPIO_ACTIVE_LOW>, <&gpio0c 5 GPIO_ACTIVE_LOW>;
 
+	display: ssd1322@0 {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		spi-max-frequency = <10000000>;
+		reg = <0>;
+		compatible = "linux,spidev";
+	};
+
 	mcp23s08: gpio-expander@1 {
 		compatible = "microchip,mcp23s08";
 		reg = <1>;
