arm64: mcom03_defconfig: Enable lm73 driver
LM73 temperature sensors installed on EGW-CB r1.0 are supported by this
driver.

Issue: #MCOM03SW-981
Change-Id: Ifd8b77c1f139e150da078e64e0a2cf896acee9fd
Signed-off-by: Oleg Ivanov <oaivanov@elvees.com>

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -249,6 +249,7 @@ CONFIG_W1=m
 CONFIG_W1_MASTER_DS2482=m
 CONFIG_W1_SLAVE_SMEM=m
 CONFIG_SENSORS_MR75202=y
+CONFIG_SENSORS_LM73=m
 CONFIG_WATCHDOG=y
 CONFIG_DW_WATCHDOG=y
 CONFIG_USBPCWATCHDOG=m
