--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -481,6 +481,8 @@ CONFIG_LEDS_GPIO=m
 CONFIG_LEDS_TRIGGER_TIMER=m
 CONFIG_LEDS_TRIGGER_ONESHOT=m
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
+CONFIG_RTC_CLASS=y
+CONFIG_RTC_DRV_RV8803=m
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_ARM_ARCH_TIMER_EVTSTREAM is not set
 # CONFIG_FSL_ERRATUM_A008585 is not set
