wdt: Add mcom03-wdt driver
This commit adds SiP implementation to communicate with
RISC0 WDT driver in case of secure application when WDT
registers are accessible only for RISC0.

Issue: #MCOM03SW-1850
Change-Id: Ifa7f59be846dcac3d2d8293098d19258d6f8c196

--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -837,6 +837,14 @@ config SPRD_WATCHDOG
 	  Say Y here to include watchdog timer supported
 	  by Spreadtrum system.
 
+config MCOM03_WATCHDOG
+	tristate "ELVEES MCom-03 SoC watchdog support"
+	depends on ARCH_MCOM03 || COMPILE_TEST
+	select WATCHDOG_CORE
+	help
+	  Say Y here to include watchdog timer supported
+	  by ELVEES MCom-03 SoC.
+
 # X86 (i386 + ia64 + x86_64) Architecture
 
 config ACQUIRE_WDT
