wdt: Add mcom03-wdt driver
This commit adds SiP implementation to communicate with
RISC0 WDT driver in case of secure application when WDT
registers are accessible only for RISC0.

Issue: #MCOM03SW-1850
Change-Id: Ic2be22386d87115555bf01073b7d6f1b0239707c
Signed-off-by: Mikhail Konovalov <mkonovalov@elvees.com>
(cherry picked from commit 82669639dc7f0bbce54bf8f95872e432d9b7baf4)

--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -1003,6 +1003,14 @@ config SPRD_WATCHDOG
 	  Say Y here to include watchdog timer supported
 	  by Spreadtrum system.
 
+config MCOM03_WATCHDOG
+	tristate "ELVEES MCom-03 SoC watchdog support"
+	depends on ARCH_MCOM03 || COMPILE_TEST
+	select WATCHDOG_CORE
+	help
+	  Say Y here to include watchdog timer supported
+	  by ELVEES MCom-03 SoC.
+
 config PM8916_WATCHDOG
 	tristate "QCOM PM8916 pmic watchdog"
 	depends on OF && MFD_SPMI_PMIC
