arm64: mcom03_defconfig: Enable mcom03-wdt driver
Issue: #MCOM03SW-1850
Change-Id: I524c9edddb2088c732a3715276e4b6d26873c501

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -318,6 +318,7 @@ CONFIG_SENSORS_EMC2305=m
 CONFIG_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_DW_WATCHDOG=y
+CONFIG_MCOM03_WATCHDOG=y
 CONFIG_USBPCWATCHDOG=m
 CONFIG_MFD_DLN2=m
 CONFIG_MFD_SYSCON=y
