--- a/arch/arm64/boot/dts/elvees/mcom03-i2c4.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03-i2c4.dtsi
@@ -4,16 +4,6 @@
  */
 
 / {
-	qlic0: interrupt-controller@1fe00000 {
-		compatible = "elvees,qlic";
-		interrupt-controller;
-		targets = <4>;
-		#interrupt-cells = <1>;
-		interrupt-parent = <&gic>;
-		interrupts = <GIC_SPI 8 IRQ_TYPE_LEVEL_HIGH>;
-		reg = <0 0x1fe00000 0 0x40000>;
-	};
-
 	i2c4: i2c@1f090000 {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -25,4 +15,8 @@
 		i2c-sda-hold-time-ns = <300>;
 		status = "disabled";
 	};
+};
+
+&qlic0 {
+	status = "okay";
 };
