--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -1317,6 +1317,7 @@
 				interrupts = <GIC_SPI 9 IRQ_TYPE_LEVEL_HIGH>;
 				snps,dis_u2_susphy_quirk;
 				snps,parkmode-disable-ss-quirk;
+				dr_mode = "host";
 			};
 		};
 
@@ -1340,6 +1341,7 @@
 				interrupts = <GIC_SPI 10 IRQ_TYPE_LEVEL_HIGH>;
 				snps,dis_u2_susphy_quirk;
 				snps,parkmode-disable-ss-quirk;
+				dr_mode = "host";
 			};
 		};
 	};
