arm64: mcom03_defconfig: Enable TPS6598x USB Type-C driver
TPS6598x USB Type-C controller is installed on Trustphone CB board.
DWC3 driver is switched to DRD mode to support Host and Device
USB controller modes.

Issue: #MCOM03SW-1088
Issue: #MCOM03SW-1089
Change-Id: I6e7ddd88f4b42695485940c97422f3608e3f1c4c

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -552,9 +552,12 @@ CONFIG_USB_HSIC_USB3503=m
 CONFIG_USB_HSIC_USB4604=y
 CONFIG_USB_ISP1301=m
 CONFIG_USB_ULPI=y
-CONFIG_USB_GADGET=m
+CONFIG_USB_GADGET=y
+CONFIG_USB_MASS_STORAGE=m
 CONFIG_TYPEC=m
-CONFIG_USB_ROLE_SWITCH=m
+CONFIG_TYPEC_UCSI=m
+CONFIG_TYPEC_TPS6598X=m
+CONFIG_USB_ROLE_SWITCH=y
 CONFIG_USB_ULPI_BUS=m
 CONFIG_UWB=m
 CONFIG_UWB_HWA=m
