arm64: dts: elvees: trustphonecb: Enable output OUTB for PWM channel 0
Also set output to "0" when channel 0 is disabled.

Issue: #MCOM03SW-1983
Change-Id: I866cc334f94a5aac720a6d7d3c0243b9507a7f73

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
@@ -280,6 +280,12 @@
 		pins = "GPIOA_5";
 		input-enable;
 	};
+
+	pwm0_cfg_default: pwm0-cfg {
+		pins = "GPIOD_3";
+		drive-strength = <4>;
+		slew-rate = <3>;
+	};
 };
 
 &i2c01 {
@@ -492,4 +498,13 @@
 		"", "", "", "", "", "", "", "", "", "", "", "";
 
 	gpio-reserved-ranges = <0 1>, <10 22>;
+};
+
+&pwm {
+	status = "okay";
+	elvees,output-channel = <1 0 0 0>;
+	elvees,state-on-disable = <1 0 0 0>;
+
+	pinctrl-names = "default";
+	pinctrl-0 = <&pwm_oenb0_mux &pwm0_cfg_default>;
 };
