--- a/drivers/pinctrl/elvees/Makefile
+++ b/drivers/pinctrl/elvees/Makefile
@@ -1,2 +1,3 @@
 obj-$(CONFIG_PINCTRL_MCOM03_HSPERIPH)	+= pinctrl-mcom03-hsperiph.o
 obj-$(CONFIG_PINCTRL_MCOM03_LSPERIPH)	+= pinctrl-mcom03-lsperiph.o
+obj-$(CONFIG_PINCTRL_MCOM03_MEDIA)	+= pinctrl-mcom03-media.o
