--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1-b101uan01.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r1.5-trustphonecb-r1.1-b101uan01.dts
@@ -42,6 +42,7 @@
 &display_encoder {
 	video-output = "dsi";
 	dsi-clock-frequency = <500000000>;
+	pinctrl-0 = <&isp_mux>;
 
 	dsi-panel@0 {
 		#address-cells = <1>;
