arm64: dts: elvees: Use mcom03-wdt instead of designware-wdt
Issue: #MCOM03SW-1850
Change-Id: Ibe46e7ee56976350922b5fff9ca0345d9c53ec11

--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -233,9 +233,7 @@
 		};
 
 		wdt0: watchdog@1f080000 {
-			compatible = "snps,dw-wdt";
-			reg = < 0 0x1f080000 0 0x1000>;
-			clocks = <&service_ucg1 SERVICE_APB_CLK>;
+			compatible = "elvees,mcom03-wdt";
 		};
 
 		pvt: pvt@1f050000 {
