arm64: dts: elvees: trustphonecb: Enable UART3
Bluetooth is connected to UART3.

Issue: #MCOM03SW-1776
Change-Id: I79b8197ea03ecc74544ad2fe10258928acbe4f1d

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
@@ -503,6 +503,11 @@
 	status = "okay";
 };
 
+&uart3 {
+	status = "okay";
+	pinctrl-0 = <&uart3_mux_data &uart3_mux_rtscts>;
+};
+
 &mfbsp0_gpio {
 	status = "okay";
 
