--- a/arch/arm64/boot/dts/elvees/mcom03.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03.dtsi
@@ -273,7 +273,7 @@
 			clocks = <&service_ucg1 SERVICE_MFBSP0_CLK>;
 			clock-names = "bus";
 			reg-names = "dat", "dirout";
-			reg = <0 0x1f0a1308 0 4>, <0 0x1f0a130c 0 4>;
+			reg = <0 0x1f0a130c 0 4>, <0 0x1f0a1308 0 4>;
 			#gpio-cells = <2>;
 			gpio-controller;
 			status = "disabled";
@@ -284,7 +284,7 @@
 			clocks = <&service_ucg1 SERVICE_MFBSP1_CLK>;
 			clock-names = "bus";
 			reg-names = "dat", "dirout";
-			reg = <0 0x1f0b1308 0 4>, <0 0x1f0b130c 0 4>;
+			reg = <0 0x1f0b130c 0 4>, <0 0x1f0b1308 0 4>;
 			#gpio-cells = <2>;
 			gpio-controller;
 			status = "disabled";
