arm64: dts: elvees: elvmc03smarc: Describe RTC
On ELV-MC03-SMARC used RTC RV-8803.

Issue: #MCOM03SW-1301
Change-Id: Ife2778ca26e91a971d9bce634cf2e08bd7b2fb6b

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0.dtsi
@@ -192,6 +192,11 @@ i2c_pm: &i2c0 { };
 	clock-frequency = <100000>;
 	status = "okay";
 
+	rtc@32 {
+		compatible = "microcrystal,rv8803";
+		reg = <0x32>;
+	};
+
 	adv7513: hdmi@39 {
 		#sound-dai-cells = <0>;
 		compatible = "adi,adv7513";
