--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0.dtsi
@@ -150,6 +150,11 @@ i2c_pm: &i2c0 { };
 	clock-frequency = <100000>;
 	status = "okay";
 
+	rtc@32 {
+		compatible = "microcrystal,rv8803";
+		reg = <0x32>;
+	};
+
 	adv7513: hdmi@39 {
 		compatible = "adi,adv7513";
 		status = "disabled";
