mcom03_defconfig: Enable Silvaco QSPI driver
Issue: #MCOM03SW-2010
Change-Id: Ibd868bc367c966c0e61d738a3436e2aa3f11ece8
Signed-off-by: Omar Al-Wadi <oalwadi@elvees.com>

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -113,6 +113,9 @@ CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_STANDALONE is not set
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
+CONFIG_MTD=y
+CONFIG_MTD_SPI_NOR=y
+# CONFIG_MTD_SPI_NOR_USE_4K_SECTORS is not set
 CONFIG_BLK_DEV_NVME=m
 CONFIG_SRAM=y
 CONFIG_EEPROM_AT24=y
@@ -238,6 +241,7 @@ CONFIG_I2C_DESIGNWARE_PLATFORM=y
 CONFIG_SPI=y
 CONFIG_SPI_DESIGNWARE=m
 CONFIG_SPI_DW_MMIO=m
+CONFIG_SPI_SILVACO_QSPI=y
 CONFIG_SPI_SPIDEV=m
 # CONFIG_PTP_1588_CLOCK is not set
 CONFIG_PINCTRL=y
