arm64: dts: elvees: trustphone: Describe CPU audio
It is required to playback/record audio using CPU.

Issue: #MCOM03SW-1950
Change-Id: Icde9db704fe7acc4579f17445ef86191dbc9d1f9

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
@@ -114,10 +114,18 @@
 			"IN2B", "MICBIAS1",
 			"IN1BL", "MICVDD";
 
+		cpu {
+			sound-dai = <&i2s0>;
+		};
+
 		codec {
 			sound-dai = <&wm8998>;
 		};
 	};
+};
+
+&i2s0 {
+	status = "okay";
 };
 
 &uart0 {
