--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -603,6 +603,8 @@ CONFIG_DEVFREQ_GOV_PASSIVE=y
 CONFIG_IIO=m
 CONFIG_IIO_ST_LSM6DSX=m
 CONFIG_TSL2772=m
+CONFIG_PWM=y
+CONFIG_PWM_MCOM=m
 CONFIG_RESET_CONTROLLER=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
