arm64: mcom03_defconfig: Enable nftables set support
Sets are convenient for IP address filtering.

Issue: #IPCAMSW-2334
Change-Id: Ia928912d1e7223f51bd9d8a7bc383e0501199e38

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -99,6 +99,7 @@ CONFIG_NETFILTER=y
 CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_TABLES=y
+CONFIG_NF_TABLES_SET=y
 CONFIG_NF_TABLES_INET=y
 CONFIG_NETFILTER_XT_MARK=m
 CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
@@ -316,7 +317,6 @@ CONFIG_MFD_SYSCON=y
 CONFIG_TPS6105X=m
 CONFIG_MFD_ARIZONA_I2C=m
 CONFIG_MFD_WM8998=y
-CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_ARIZONA_MICSUPP=m
 CONFIG_REGULATOR_RASPBERRYPI_TOUCHSCREEN_ATTINY=y
