--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -422,6 +422,12 @@ CONFIG_SND_DESIGNWARE_PCM=y
 CONFIG_SND_SOC_SGTL5000=m
 CONFIG_SND_SIMPLE_CARD=m
 CONFIG_USB_ULPI_BUS=m
+CONFIG_SND_SOC=m
+CONFIG_SND_DESIGNWARE_I2S=m
+CONFIG_SND_DESIGNWARE_PCM=y
+CONFIG_SND_SOC_ELVEES_MFBSP=m
+CONFIG_SND_SOC_ES8316=m
+CONFIG_SND_SIMPLE_CARD=m
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_XHCI_HCD=y
