dt-bindings: clocks: mcom03-clk-ucg: Add round up support
To round up requested frequency is required for some functionality.

Example: UART driver requests minimal frequency, but UART can not set
internal divider if clock driver will set frequency less than requested.

Issue: #MCOM03SW-1776
Issue: #MCOM03SW-2012
Change-Id: Id455d46c9cb5164aa0131dcfb47e5559f3216801

--- a/Documentation/devicetree/bindings/clock/elvees,mcom03-clk-ucg.yaml
+++ b/Documentation/devicetree/bindings/clock/elvees,mcom03-clk-ucg.yaml
@@ -37,6 +37,11 @@ properties:
     description: Bitmask of channels which must not change frequency
     default: 0
 
+  elvees,round-up-mask:
+    $ref: /schemas/types.yaml#/definitions/uint32
+    description: Bitmask of channels for which frequency must be rounded up
+    default: 0
+
 required:
   - compatible
   - reg
