--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -609,6 +609,7 @@ CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
 CONFIG_IIO=m
+CONFIG_TI_ADS1110=m
 CONFIG_IIO_ST_LSM6DSX=m
 CONFIG_TSL2772=m
 CONFIG_PWM=y
