arm64: dts: elvees: ecam03bl: Describe IR leds
Issue: #MCOM03SW-1247
Change-Id: Ia4009fc8679ff82abcca77cc0a0642338ee68a51

--- a/arch/arm64/boot/dts/elvees/mcom03-ecam03bl-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-ecam03bl-r1.0.dts
@@ -33,6 +33,15 @@
 			system-clock-frequency = <24576000>;
 		};
 	};
+
+	leds {
+		compatible = "gpio-leds";
+
+		ir {
+			gpios = <&gpio1c 3 GPIO_ACTIVE_HIGH>;
+			default-state = "off";
+		};
+	};
 };
 
 /* On ecam03bl no pull-up resistors on i2c1 interface.
