arm64: dts: elvees: trustphonecb: Add gpio-hog for MCP23S08 reset
MSP23S08 driver doesn't support reset GPIO. Deassert reset via gpio-hog.

Issue: #MCOM03SW-1780
Change-Id: I02deb80969870ea02cb9faaa28c048e698593c6b

--- a/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-trustphonepm-r2.1-trustphonecb-r2.0.dts
@@ -528,6 +528,13 @@
 		"", "", "", "", "", "", "", "", "", "", "", "";
 
 	gpio-reserved-ranges = <0 1>, <10 22>;
+
+	/* Use gpio-hog because mcp23s08 driver doesn't support reset signal */
+	cutter-hog {
+		gpio-hog;
+		gpios = <1 GPIO_ACTIVE_HIGH>;
+		output-high;
+	};
 };
 
 &pwm {
