arm64: dts: elvees: ecam03: Use KEY_RESTART for factory-reset
The code is changed from KEY_VENDOR to KEY_RESTART because
it is commonly used for factory-reset. For example it is used
in OpenWRT [1] and systemd-logind.service [2] for factory reset
when button is long pressed (about 5 s).

[1] https://openwrt.org/docs/guide-user/troubleshooting/failsafe_and_factory_reset
[2] https://www.freedesktop.org/software/systemd/man/logind.conf.html

Issue: #IPCAMSW-2609
Change-Id: I2a6f44623d251b6fd9cbd6f78c87f8088ea9165b

--- a/arch/arm64/boot/dts/elvees/mcom03-pm03cam-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-pm03cam-r1.0.dts
@@ -30,7 +30,7 @@
 		factory-reset {
 			label = "Factory reset";
 			gpios = <&gpio0a 7 GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_VENDOR>;
+			linux,code = <KEY_RESTART>;
 		};
 	};
 
