--- a/arch/arm64/boot/dts/elvees/mcom03-ecam03ptz-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-ecam03ptz-r1.0.dts
@@ -30,7 +30,7 @@
 		factory-reset {
 			label = "Factory reset";
 			gpios = <&gpio0a 3 GPIO_ACTIVE_LOW>;
-			linux,code = <KEY_VENDOR>;
+			linux,code = <KEY_RESTART>;
 		};
 	};
 
