net: can: Add ELVEES MFBSP CAN controller driver
This driver adds support for the ELVEES MFBSP CAN.

The driver is imported from [1].

[1] https://review.elvees.com/plugins/gitiles/robodeus/linux/+/3393d8a67a39b17f00a19fa61c68d92b78d6ba6e

Issue: #MCOM03SW-2068
Change-Id: Ib50d3e7bf2e92b7091a8f70f4153bec025c1987c

--- a/drivers/net/can/Kconfig
+++ b/drivers/net/can/Kconfig
@@ -152,6 +152,13 @@ config PCH_CAN
 	  is an IOH for x86 embedded processor (Intel Atom E6xx series).
 	  This driver can access CAN bus.
 
+config CAN_MFBSP_CAN
+	depends on HAS_IOMEM
+	depends on OF
+	tristate "ELVEES MFBSP CAN controller"
+	help
+	  This driver adds support for the ELVEES MFBSP CAN
+
 source "drivers/net/can/c_can/Kconfig"
 source "drivers/net/can/cc770/Kconfig"
 source "drivers/net/can/ifi_canfd/Kconfig"
