arm64: dts: elvees: elvsmarccb: Enable MFBSP CAN0, MFBSP CAN1
MFBSP CAN0, MFBSP CAN1 are connected to XP16 socket
through CAN transceivers (MCP2562FDT-E/SN).

Issue: #MCOM03SW-2068
Change-Id: I2dd38c940ad8182953dd112102178a3a3eff89d9

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-elvsmarccb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03smarc-r1.0-elvsmarccb-r1.0.dts
@@ -61,6 +61,20 @@
 	};
 };
 
+&qlic0 {
+	status = "okay";
+};
+
+/* Connected to XP16 socket through CAN transceiver */
+&mfbsp0_can {
+	status = "okay";
+};
+
+/* Connected to XP16 socket through CAN transceiver */
+&mfbsp1_can {
+	status = "okay";
+};
+
 /* Connected to USB 3.0 hub */
 &usb0 {
 	status = "okay";
