arm64: dts: elvees: elvmc03cb: Add MCP79410T RTC
Issue: #MCOM03SW-2083
Signed-off-by: Ilya Popov <ipopov@elvees.com>
Change-Id: If0e420c2b8ce37322549a9d9775babc5579cb5cb

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2-elvmc03cb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2-elvmc03cb-r1.0.dts
@@ -79,6 +79,16 @@
 	status = "okay";
 };
 
+&i2c01 {
+	mcp7940n: rtc@6f {
+		compatible = "microchip,mcp7941x";
+		reg = <0x6f>;
+		/* MFP(7) pin routed to GPIO0C_3 which do not have interrupt line.
+		 * So device do not use interrupts and can not be used as
+		 * wakeup-source */
+	};
+};
+
 &i2c1 {
 	/* Connected to connector. Some external devices may not support
 	 * for 400kHz */
