arm64: mcom03_defconfig: Enable DS1307 RTC driver
This driver supports MCP79410 RTC on EVL-MC03-CB board.

Issue: #MCOM03SW-2083
Signed-off-by: Ilya Popov <ipopov@elvees.com>
Change-Id: I42b7430ddf04fd80cbc8c6b3afaf32fd20c7acc2

--- a/arch/arm64/configs/mcom03_defconfig
+++ b/arch/arm64/configs/mcom03_defconfig
@@ -539,6 +539,7 @@ CONFIG_LEDS_TRIGGER_TIMER=m
 CONFIG_LEDS_TRIGGER_ONESHOT=m
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_RTC_CLASS=y
+CONFIG_RTC_DRV_DS1307=m
 CONFIG_RTC_DRV_RV8803=m
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_ARM_ARCH_TIMER_EVTSTREAM is not set
