arm64: dts: elvees: elvmc03cb: Describe EMC2302 fan controller
Issue: #MCOM03SW-2083
Signed-off-by: Ilya Popov <ipopov@elvees.com>
Change-Id: Id8e4a43d8e3a2be16fae1721ed7d6aeae4b28c87

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2-elvmc03cb-r1.0.dts
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2-elvmc03cb-r1.0.dts
@@ -87,6 +87,25 @@
 		 * So device do not use interrupts and can not be used as
 		 * wakeup-source */
 	};
+
+	fancontrol: emc2302@2e {
+		compatible = "microchip,emc2305";
+		reg = <0x2e>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		microchip,pwm-separate;
+		#cooling-cells = <2>;
+
+		channel@0 {
+			reg = <0>;
+			microchip,pwm-push-pull;
+		};
+
+		channel@1 {
+			reg = <1>;
+			microchip,pwm-push-pull;
+		};
+	};
 };
 
 &i2c1 {
