arm64: dts: elvees: elvmc03cb: Describe CPU thermal zones
Describe thermal zone cpu-thermal for thermal management using
fan speed control based on CPU temperature as measured by PVT.

Issue: #MCOM03SW-2083
Signed-off-by: Ilya Popov <ipopov@elvees.com>
Change-Id: Ibceacf1b7a5263cc054d4e9f72d2e95a34af79a1

--- a/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2.dtsi
+++ b/arch/arm64/boot/dts/elvees/mcom03-elvmc03-r2.2.dtsi
@@ -6,6 +6,7 @@
 /dts-v1/;
 
 #include <dt-bindings/gpio/gpio.h>
+#include <dt-bindings/thermal/thermal.h>
 
 #include "mcom03.dtsi"
 
@@ -17,6 +18,22 @@
 
 	chosen {
 		stdout-path = "serial0:115200n8";
+	};
+
+	thermal-zones {
+		cpu_thermal: cpu0-thermal {
+			thermal-sensors = <&pvt 0>;
+			polling-delay-passive = <250>;
+			polling-delay = <1000>;
+
+			trips {
+				cpu_alert0: cpu-alert-0 {
+					temperature = <50000>;
+					hysteresis = <1000>;
+					type = "active";
+				};
+			};
+		};
 	};
 };
 
